company_contact changed to COMPANY contact

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-#ALTER TABLE `users` CHANGE `company` `company_contact` VARCHAR(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL;
+#ALTER TABLE `users` CHANGE `company` `company_name` VARCHAR(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NULL DEFAULT NULL;
 #ALTER TABLE `users` ADD `apt_suit` VARCHAR(100) NULL DEFAULT NULL AFTER `address`, ADD `city` VARCHAR(50) NULL DEFAULT NULL AFTER `apt_suit`, ADD `state` VARCHAR(10) NULL DEFAULT NULL AFTER `city`, ADD `zip` INT NULL DEFAULT NULL AFTER `state`;
 #ALTER TABLE `users` ADD `price_list` SMALLINT NULL DEFAULT NULL AFTER `zip`, ADD `contract_code` SMALLINT NULL DEFAULT NULL AFTER `price_list`, ADD `terms` VARCHAR(10) NULL DEFAULT NULL AFTER `contract_code`, ADD `credit_limit` INT NULL DEFAULT NULL AFTER `terms`;
 #ALTER TABLE `users` ADD `carrier_id` SMALLINT NULL AFTER `credit_limit`;
