fixed the scroll bar issue

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/assets/css/app.css": "/assets/css/app.css",
-    "/assets/js/vendor.js": "/assets/js/vendor.js",
-    "/assets/css/vendor.css": "/assets/css/vendor.css"
+    "/assets/css/app.css": "/assets/css/app.css?id=a8b9365f2d9c4c98982b",
+    "/assets/js/vendor.js": "/assets/js/vendor.js?id=e608790260761563b564",
+    "/assets/css/vendor.css": "/assets/css/vendor.css?id=f962f1a0e503b9ff7872"
 }
