updated from local DONE

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,1 +1,1 @@
-{}
+{"registration":{"captcha":{"enabled":true}},"remember_me":"0","forgot_password":"1","login_reset_token_lifetime":"60","reg_enabled":"1","tos":"0","reg_email_confirmation":"1","app_name":"Virgin Farms Direct Inc."}
