--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "laravel/ui": "^4.0",
         "laravelcollective/html": "^6.3",
         "maatwebsite/excel": "^3.1",
+        "mailchimp/marketing": "^3.0",
         "proengsoft/laravel-jsvalidation": "^4.0.0",
         "spatie/laravel-query-builder": "^5.0",
         "vanguardapp/activity-log": "^5.0",
