testing some stuff and carrier logic updated

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,4 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 #ALTER TABLE `users` ADD `apt_suit` VARCHAR(100) NULL DEFAULT NULL AFTER `address`, ADD `city` VARCHAR(50) NULL DEFAULT NULL AFTER `apt_suit`, ADD `state` VARCHAR(10) NULL DEFAULT NULL AFTER `city`, ADD `zip` INT NULL DEFAULT NULL AFTER `state`;
 #ALTER TABLE `users` ADD `price_list` SMALLINT NULL DEFAULT NULL AFTER `zip`, ADD `contract_code` SMALLINT NULL DEFAULT NULL AFTER `price_list`, ADD `terms` VARCHAR(10) NULL DEFAULT NULL AFTER `contract_code`, ADD `credit_limit` INT NULL DEFAULT NULL AFTER `terms`;
 #ALTER TABLE `users` ADD `carrier_id` SMALLINT NULL AFTER `credit_limit`;
+#ALTER TABLE `users` ADD `carrier_id_default` SMALLINT NULL AFTER `carrier_id`;
